<resources>
    <string name="alivc_base_beauty">Skin Filter</string>
    <string name="alivc_base_beauty_face">Face Filter</string>
    <string name="alivc_base_fine_tune">Makeup</string>
    <string name="alivc_base_stickers">Stickers</string>
    <string name="alivc_base_filter">Filter</string>
    <string name="alivc_base_beauty_whitening">Skin Whitening</string>
    <string name="alivc_base_beauty_buffing">Skin Polishing</string>
    <string name="alivc_base_beauty_blush">Skin Polishing</string>
    <string name="alivc_base_beauty_bigeye">BigEye</string>
    <string name="alivc_base_beauty_thinface">SlimFace</string>
    <string name="alivc_base_beauty_level_advanced">Advanced</string>
    <string name="alivc_base_tips_fine_tuning">Tuning</string>
    <string name="alivc_base_beauty_copyright">Advanced features are supported by FaceUnity</string>
    <string name="alivc_base_beauty_copyright_link">View details</string>
    <string name="alivc_base_svideo_next">Next</string>
    <string name="alivc_recorder_record_dialog_not_setting">Cancel</string>
    <string name="alivc_recorder_record_tip_phone_state_calling">Calling, Recording will be muted</string>
    <string name="alivc_record_request_permission_positive_btn_text">Setting</string>
    <string name="alivc_recorder_record_dialog_permission_remind">Please allow Video to access Photos/camera/sdcard first</string>
    <string name="alivc_recorder_record_start_recorder">Record</string>
    <string name="alivc_mix_record_continue">The video is too short. Let\'s take another one</string>
    <string name="alivc_recorder_record_create_video">Creating video</string>
    <string name="alivc_editor_publish_compose_failed">Video creation failed</string>
    <string name="alivc_common_no_camera_permission">Camera usage is not permitted, please open first</string>
    <string name="alivc_common_no_record_bluetooth_permission">Bluetooth is not permitted to record, please open first</string>
    <string name="alivc_common_no_record_audio_permission">Audio is not permitted to record, please open first</string>
    <string name="alivc_common_no_read_phone_state_permission">Phone state is not permitted to read, please opend first</string>
    <string name="alivc_common_no_write_external_storage_permission">External storage is not permitted to write, please open first</string>
    <string name="alivc_common_no_read_external_storage_permission">External storage is not permitted to read, please open first</string>
    <string name="alivc_common_note">Note</string>
    <string name="alivc_common_confirm">Confirm</string>
    <string name="alivc_common_no_permission">no permission</string>
    <string name="alivc_common_operate_success">Success</string>
    <string name="alivc_common_operate_fail">Fail</string>
    <string name="alivc_common_loading">Loading</string>
    <string name="alivc_common_device_memory_not_enough">Insufficient memory. Please clear memory cache</string>
    <string name="alivc_common_creating_video_remind">"Creating video，Please wait "</string>
    <string name="alivc_common_download">Download</string>
    <string name="alivc_common_cancel">Cancel</string>
    <string name="alivc_common_no_free_memory">disk space not enough</string>
    <string name="alivc_media_setting_import_edit">Import edit</string>
    <string name="alivc_media_frame_rate">Frame rate</string>
    <string name="alivc_media_gop">Key frame interval</string>
    <string name="alivc_media_frame_rate_hint">Recommended 20-30, default 30</string>
    <string name="alivc_media_gop_hint">Recommended 1-300, default 250</string>
    <string name="alivc_media_resolution">Resolution</string>
    <string name="alivc_media_crop_mode">Crop mode</string>
    <string name="alivc_media_mode_fill">filling</string>
    <string name="alivc_media_mode_crop">Crop</string>
    <string name="alivc_media_start_import">Start import</string>
    <string name="alivc_media_gallery_all_media">Camera Roll</string>
    <string name="alivc_media_resolution_1_1">540*540</string>
    <string name="alivc_media_resolution_3_4">540*720</string>
    <string name="alivc_media_resolution_9_16">540*960</string>
    <string name="alivc_media_video_quality">Quality</string>
    <string name="alivc_media_video_quality_low">low</string>
    <string name="alivc_media_video_quality_meidan">in</string>
    <string name="alivc_media_video_quality_high">high</string>
    <string name="alivc_media_video_quality_super">Extremely high</string>
    <string name="alivc_media_wait">Please wait</string>
    <string name="alivc_media_video_crop_erroe">Video format is not supported</string>
    <string name="alivc_media_sdcard_not_ready">SDCARD is not ready</string>
    <string name="alivc_media_video_duration">%1$02d:%2$02d:%3$02d</string>
    <string name="alivc_media_message_max_duration_import">The total length of the video does not exceed 5 minutes, please continue after cropping!</string>
    <string name="alivc_media_total_duration_label_import">Total duration</string>
    <string name="alivc_media_please_select_video">Please select a video</string>
    <string name="alivc_media_film_tail">Credit</string>
    <string name="alivc_media__hardware_encoder">Hard-coded</string>
    <string name="alivc_media__openh264_encoder">OpenH264 soft editor</string>
    <string name="alivc_media__ffmpeg_encoder">FFmpeg soft editor</string>
    <string name="alivc_media_aliyun_video_codec">Encoding</string>
    <string name="alivc_recorder_setting_start">Start</string>
    <string name="alivc_recorder_setting_width">Width</string>
    <string name="alivc_recorder_setting_open_skin_filter">Skin Filter Close</string>
    <string name="alivc_recorder_setting_height">Height</string>
    <string name="alivc_recorder_control_filter">Filter</string>
    <string name="alivc_recorder_setting_close_face_detection">Face Detection Close</string>
    <string name="alivc_recorder_setting_open_face_detection">Face Detection Open</string>
    <string name="alivc_recorder_setting_tittle">Record Settings</string>
    <string name="alivc_recorder_dialog_filter_none">Original</string>
    <string name="alivc_recorder_control_delete">Delete</string>
    <string name="alivc_recorder_menu_action_settings">Settings</string>
    <string name="alivc_recorder_play_tip_video_save">The video is saved to Photos</string>
    <string name="aliyun_beauty_face">Skin Filter</string>
    <string name="aliyun_face_sticker">Stickers</string>
    <string name="alivc_music_network_not_connect">No network is found. Check your network and try again</string>
    <string name="alivc_music_no_free_memory">Insufficient memory. Please clear memory cache</string>
    <string name="alivc_music_empty_music">Original</string>
    <string name="alivc_music_online_music">Online Music</string>
    <string name="alivc_music_local_music">Local Music</string>
    <string name="alivc_music_copyright">Provided by Taihe Music DMH</string>
    <string name="alivc_music_copyright_link">How to get</string>
    <string name="alivc_music_complete">OK</string>
    <string name="alivc_music_play_url_null">Url is empty</string>
    <string name="alivc_recorder_record_aspect_ratio_content">Change</string>
    <string name="alivc_recorder_control_music">Music</string>
    <string name="alivc_music_select_music">Music</string>
    <string name="alivc_recorder_control_long_press">Hold</string>
    <string name="alivc_recorder_control_press">Hold</string>
    <string name="alivc_recorder_control_click">Tap</string>
    <string name="aliyun_rate_very_slow">Slower</string>
    <string name="alivc_recorder_control_rate_slow">Slow</string>
    <string name="alivc_base_beauty_level_normal">Normal</string>
    <string name="alivc_recorder_control_rate_standard">Normal</string>
    <string name="alivc_recorder_control_rate_fast">Fast</string>
    <string name="alivc_recorder_control_rate_very_fast">Faster</string>
    <string name="alivc_media_next_camera_roll_import">Next</string>
    <string name="alivc_recorder_setting_video_style">Shooting mode</string>
    <string name="alivc_recorder_setting_general_text">ordinary</string>
    <string name="alivc_recorder_setting_mix_text">CO production</string>
    <string name="alivc_progress_content_text">In resource copy</string>
    <string name="aliyun_start_mix_record">Choose a co production video</string>
    <string name="alivc_record_request_permission_content_text"><![CDATA[Please allow ApsaraVideo to access Photos/camera/sdcard first，]]></string>
    <string name="alivc_record_request_permission_negative_btn_text">Cancel</string>
    <string name="alivc_record_not_supported_audio">The audio format is invalid</string>
    <string name="alivc_record_video_crop_failed">Failed to crop the video</string>
    <string name="alivc_record_request_no_permission_content_text">no permission</string>
    <string name="alivc_record_error_tip_play_video_error">The video format is invalid</string>
    <string name="alivc_editor_publish_select_cover">Select Album Art</string>
    <string name="alivc_editor_publish_not_shutdown_app">Do not close the app</string>
    <string name="alivc_editor_publish_tip_add_desc">Add a description here</string>
    <string name="alivc_editor_publish_countoflimit">No more than 20 characters</string>
    <string name="alivc_editor_dialog_animate_phantom">Phantom</string>
    <string name="alivc_editor_dialog_animate_ghosting">Double shadow</string>
    <string name="alivc_editor_dialog_animate_science_fiction">science fiction</string>
    <string name="alivc_editor_dialog_animate_jitter">Shake</string>
    <string name="alivc_editor_dialog_animate_blur">obscure</string>
    <string name="alivc_editor_dialog_caption_font">Font</string>
    <string name="alivc_editor_dialog_caption_font_system">System Font</string>
    <string name="alivc_editor_dialog_caption_keyboard">Keyboard</string>
    <string name="alivc_editor_dialog_caption_color">Color</string>
    <string name="alivc_editor_dialog_caption_tip_not_support">Reverse playback does not support captions</string>
    <string name="alivc_editor_dialog_caption_effect">Effect</string>
    <string name="alivc_editor_dialog_none_effect">Original</string>
    <string name="alivc_editor_dialog_mv_more">More</string>
    <string name="alivc_editor_publish_composing">Creating video</string>
    <string name="alivc_editor_effect_text_color">Fill</string>
    <string name="alivc_editor_effect_text_stroke">Stroke</string>
    <string name="alivc_editor_dialog_none">Original</string>
    <string name="alivc_editor_dialog_effect_translate_up">Push Up</string>
    <string name="alivc_editor_dialog_effect_translate_left">Push Left</string>
    <string name="alivc_editor_dialog_effect_translate_down">Push Down</string>
    <string name="alivc_editor_dialog_effect_translate_right">Push Right</string>
    <string name="alivc_editor_dialog_effect_translate_effect_scale">Scale</string>
    <string name="alivc_editor_dialog_effect_translate_linearwipe">Linear wipe</string>
    <string name="alivc_editor_dialog_effect_shutter">Horizontal Bars</string>
    <string name="alivc_editor_dialog_effect_fade">Fade</string>
    <string name="alivc_editor_dialog_effect_circle">Circle</string>
    <string name="alivc_editor_effect_filter">Filter</string>
    <string name="alivc_editor_dialog_caption_tip_text_limit">No more than 10 characters</string>
    <string name="alivc_editor_edit_play_start">Play</string>
    <string name="alivc_editor_edit_play_pause">Pause</string>
    <string name="alivc_editor_dialog_transition_tittle">Transition</string>
    <string name="alivc_editor_dialog_transition_tip_limit">You must select at least two videos to add a transition</string>
    <string name="alivc_editor_dialog_transition_star">Star</string>
    <string name="alivc_editor_effect_mv">MV</string>
    <string name="alivc_editor_dialog_time_tittle">speed control</string>
</resources>