<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/aliyun_width"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/alivc_recorder_setting_width"
        android:inputType="number" />

    <EditText
        android:id="@+id/aliyun_height"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alivc_common_height_tv_100"
        android:hint="@string/alivc_recorder_setting_height"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openBeauty"
        android:text="@string/alivc_recorder_setting_open_skin_filter" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openFaceDetect"
        android:text="@string/alivc_recorder_setting_open_face_detection" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="start"
        android:text="@string/alivc_recorder_setting_start" />
</LinearLayout>
