<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/alivc_common_height_group_50"
        android:background="@color/alivc_common_theme_primary_light">
        <ImageView
            android:id="@+id/aliyun_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src = "@mipmap/aliyun_svideo_record_icon_cancel"
            android:layout_marginLeft="@dimen/alivc_common_margin_15"
            android:layout_gravity="left|center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alivc_music_select_music"
            android:layout_gravity="center"
            android:textColor="@color/alivc_common_font_white"
            android:textSize="@dimen/alivc_common_font_18"/>
        <TextView
            android:id="@+id/aliyun_compelet_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alivc_music_complete"
            android:layout_marginRight="@dimen/alivc_common_margin_15"
            android:layout_gravity="right|center_vertical"
            android:textColor="@color/alivc_common_font_white"
            android:textSize="@dimen/alivc_common_font_15"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/alivc_common_height_group_50"
        android:orientation="horizontal"
        android:background="@color/alivc_common_bg_black_alpha_60">
        <TextView
            android:id="@+id/aliyun_online_music"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/alivc_common_font_15"
            android:textColor="@color/alivc_common_font_white"
            android:text="@string/alivc_music_online_music"
            android:drawableBottom="@drawable/aliyun_svideo_bottom_line_selector"/>
        <TextView
            android:id="@+id/aliyun_local_music"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/alivc_common_font_15"
            android:textColor="@android:color/white"
            android:text="@string/alivc_music_local_music"
            android:drawableBottom="@drawable/aliyun_svideo_bottom_line_selector"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/alivc_common_bg_white_alpha_30"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id ="@+id/aliyun_music_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alivc_common_bg_black_alpha_60">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>
