<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.opengl.GLSurfaceView
        android:id="@+id/aliyun_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    <ImageView
        android:id="@+id/aliyun_test"
        android:layout_width="@dimen/alivc_common_size_icon_100"
        android:layout_height="@dimen/alivc_common_size_icon_100"
        android:layout_gravity="top|left"
        android:scaleType="centerInside"/>
    <TextView
        android:id="@+id/aliyun_filter_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="8"
        android:shadowRadius="1"
        android:textColor="@color/alivc_common_font_white"
        android:textSize="@dimen/alivc_common_font_16" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/aliyun_svideo_actionbar_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginRight="@dimen/alivc_common_margin_15">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alivc_common_margin_10"
            android:layout_marginBottom="@dimen/alivc_common_margin_10"
            android:id="@+id/aliyun_mv"
            android:src="@mipmap/aliyun_video_icon_migic_music"/>

        <ImageView
            android:id="@+id/aliyun_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alivc_common_margin_10"
            android:layout_marginBottom="@dimen/alivc_common_margin_10"
            android:src="@mipmap/aliyun_svideo_icon_magic_music" />

        <ImageView
            android:id="@+id/aliyun_switch_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alivc_common_margin_10"
            android:layout_marginBottom="@dimen/alivc_common_margin_10"
            android:src="@drawable/aliyun_svideo_switch_magic_camera_light_selector" />

        <ImageView
            android:id="@+id/aliyun_switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alivc_common_margin_10"
            android:layout_marginBottom="@dimen/alivc_common_margin_10"
            android:src="@drawable/aliyun_svideo_switch_magic_camera_selector" />
        <ImageView
            android:id="@+id/aliyun_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alivc_common_margin_10"
            android:layout_marginBottom="@dimen/alivc_common_margin_10"
            android:src="@drawable/aliyun_svideo_magic_camera_complete_selector" />
        </LinearLayout>
        <ImageView
            android:id="@+id/aliyun_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left"
            android:layout_marginLeft="@dimen/alivc_common_margin_15"
            android:layout_marginTop="@dimen/alivc_common_margin_10"
            android:src="@mipmap/aliyun_svideo_record_icon_cancel" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:id="@+id/aliyun_record_layout_bottom"
        android:orientation="vertical">
        <TextView
            android:id="@+id/aliyun_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/alivc_common_margin_10"
            android:textColor="@color/alivc_common_font_white"
            android:textSize="@dimen/alivc_common_font_25"
            android:text="@string/alivc_recorder_control_delete"
            android:layout_marginBottom="@dimen/alivc_common_margin_10"/>
        <LinearLayout
            android:id="@+id/aliyun_rate_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alivc_common_height_group_40"
            android:paddingLeft="@dimen/alivc_common_padding_50"
            android:paddingRight="@dimen/alivc_common_padding_50"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/aliyun_rate_quarter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.98"
                android:textSize="@dimen/alivc_common_font_15"
                android:textColor="@color/alivc_common_font_black"
                android:gravity="center"
                android:text="@string/aliyun_rate_very_slow"
                android:background="@drawable/aliyun_svideo_switch_music_select_left"/>
            <TextView
                android:id="@+id/aliyun_rate_half"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/alivc_common_font_15"
                android:textColor="@color/alivc_common_font_black"
                android:gravity="center"
                android:text="@string/alivc_recorder_control_rate_slow"
                android:background="@drawable/aliyun_svideo_switch_music_select"/>
            <TextView
                android:id="@+id/aliyun_rate_origin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/alivc_common_font_15"
                android:textColor="@color/alivc_common_font_black"
                android:gravity="center"
                android:text="@string/alivc_recorder_control_rate_standard"
                android:background="@drawable/aliyun_svideo_switch_music_select"/>
            <TextView
                android:id="@+id/aliyun_rate_double"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/alivc_common_font_15"
                android:textColor="@color/alivc_common_font_black"
                android:gravity="center"
                android:text="@string/alivc_recorder_control_rate_fast"
                android:background="@drawable/aliyun_svideo_switch_music_select"/>
            <TextView
                android:id="@+id/aliyun_rate_double_power2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.98"
                android:textSize="@dimen/alivc_common_font_15"
                android:textColor="@color/alivc_common_font_black"
                android:gravity="center"
                android:text="@string/alivc_recorder_control_rate_very_fast"
                android:background="@drawable/aliyun_svideo_switch_music_select_right"/>
        </LinearLayout>
        <TextView
            android:id="@+id/aliyun_record_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/alivc_common_font_white"
            android:textSize="@dimen/alivc_common_font_15" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="bottom">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/aliyun_pasterView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:overScrollMode="never"/>

            <FrameLayout
                android:id="@+id/aliyun_record_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/aliyun_svideo_shape_oval_white"
                android:visibility="visible">

                <com.sm9i.aliyun_video.aliyun.base.widget.FanProgressBar
                    android:id="@+id/aliyun_record_progress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:circleMaxProgress="100"
                    app:initStyle="empty"
                    app:internalBackgroundColor="@android:color/transparent"
                    app:internalDirection="counterclockwise"
                    app:outBackgroundColor="@color/alivc_common_bg_pink"
                    app:outDirection="counterclockwise"
                     />

            </FrameLayout>

            <com.sm9i.aliyun_video.aliyun.base.widget.CircleProgressBar
                android:id="@+id/aliyun_download_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:visibility="gone"
                app:progressColor="@color/alivc_common_bg_white_alpha_50" />

        </FrameLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/aliyun_copy_res_tip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alivc_common_height_group_40"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/aliyun_tip_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center" />

        <ProgressBar
            android:layout_width="@dimen/alivc_common_size_progress_40"
            android:layout_height="@dimen/alivc_common_size_progress_40"
            android:layout_gravity="center" />
    </FrameLayout>
    <com.sm9i.aliyun_video.aliyun.base.widget.RecordTimelineView
        android:id="@+id/aliyun_record_timeline"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
</FrameLayout>
